--- a/index.html
+++ b/index.html
@@ -3,22 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
+    <title>Portfolio</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <script defer src="script.js"></script>
 </head>
 <body>
-    <header>
-        <h1>My Portfolio</h1>
-        <nav>
-            <ul>
-                <li><a href="#about">About</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </nav>
+    <!-- <header>
+        <h1>Welcome everyone !</h1>
     </header>
+     -->
+    <section id="home" class="text-center p-5">
+        <div class="container">
+            <h1 class="display-4">Welcome to My Portfolio</h1>
+            <p class="lead">Explore my work and skills.</p>
+            <a href="#about" class="btn btn-primary">Learn More</a>
+        </div>
+    </section>
 
     <section id="hero" class="text-center p-5">
         <div class="container">
@@ -36,26 +37,36 @@
         <h2 class=""text-center">Projects</h2>
         <div class="row">
             <div class="col-md-6">
-                <div class="card bg-dark text-light p-3">
-                    <h3>Data-Driven Flight Delay Optimization Project</h3>
-                    <ul>
-                       <li>Developed a CNN-LSTM model to capture spatial and temporal dependencies in flight delays.</li>
-                       <li>Used Mean Absolute Error (MAE) to evaluate model performance and analyzed airport and flight route networks using graph-based techniques.</li>
-                       <li>Implemented a Simple Genetic Algorithm to optimize flight schedules for minimizing delays and utilized radar plots for feature importance analysis.</li>
-                    </ul>  
-                </div> 
+                <div class="card flip-card">
+                    <div class="flip-card-inner">
+                        <div class="flip-card-front">
+                            <h3>Data-Driven Flight Delay Optimization Project</h3>
+                        </div>
+                        <div class="flip-card-back">
+                            <ul>
+                                <li>Developed a CNN-LSTM model to capture spatial and temporal dependencies in flight delays.</li>
+                                <li>Used Mean Absolute Error (MAE) to evaluate model performance and analyzed airport and flight route networks using graph-based techniques.</li>
+                                <li>Implemented a Simple Genetic Algorithm to optimize flight schedules for minimizing delays and utilized radar plots for feature importance analysis.</li>
+                               </ul>  
+                        </div>
+                    </div>
+                 </div>
             </div>
-        
             <div class="col-md-6">
-                <div class="card bg-dark text-light p-3">
-                    
-                    <h3>Visual Taxonomy Project (Fashion Attribute Prediction)</h3>
-                    <ul>
-                        <li>Designed a Hybrid Deep Learning model to predict key attributes such as color, pattern, and sleeve length from fashion item images.</li>
-                        <li>Worked on a dataset of fashion item images across five categories and explored computer vision techniques to improve prediction accuracy.</li>
-                        <li>Focused on maximizing the harmonic mean of micro and macro F1 scores for evaluation.</li>
-                    </ul>
-                </div>
+                <div class="card flip-card">
+                    <div class="flip-card-inner">
+                        <div class="flip-card-front">
+                            <h3>Visual Taxonomy Project (Fashion Attribute Prediction)</h3>
+                        </div>
+                        <div class="flip-card-back">
+                            <ul>
+                                <li>Designed a Hybrid Deep Learning model to predict key attributes such as color, pattern, and sleeve length from fashion item images.</li>
+                                <li>Worked on a dataset of fashion item images across five categories and explored computer vision techniques to improve prediction accuracy.</li>
+                                <li>Focused on maximizing the harmonic mean of micro and macro F1 scores for evaluation.</li>
+                            </ul>
+                        </div>
+                    </div>
+                 </div>
             </div>
         </div>
     </section>
